# Setrixtui

./: Cargo.toml  README.md  onedark.theme
assets/: banner.typ  lib.typ  repo_card.typ
src/: app.rs  game.rs  highscores.rs  input.rs  main.rs  theme.rs  ui.rs
