[package]
name = "setrixtui"
version = "0.2.0"
edition = "2024"
rust-version = "1.86"
description = "Setris/Sandtrix-style falling-sand puzzle game in the terminal"
license = "MIT"
repository = "https://github.com/yourusername/setrixtui"
keywords = ["tetris", "setris", "sandtrix", "tui", "game"]
categories = ["games", "command-line-interface"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
crossterm = "0.29"
ratatui = "0.30"
tachyonfx = "0.23"
thiserror = "2"

[build-dependencies]

[dev-dependencies]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[lints.rust]
unsafe_op_in_unsafe_fn = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
cargo = "warn"
# Allow some pedantic lints that are noisy for game code
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
